Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.1.13, 10.0, 10.1, 10.2
-
Fix Version/s: 10.1.14
-
Component/s: Storage Engine - Connect
-
Labels:None
-
Environment:3.2.0-4-amd64 #1 SMP Debian 3.2.35-2 x86_64 GNU/Linux
-
Sprint:10.1.14
Description
I've found a problem with connect engine using SRCDEF notation when creating a table. The problem is a broken table created when SRCDEF parameter contains an sql query more than 32 kb long. For example, sql query with long list of ids in "where x IN ( ... )" conditional statement.
The following error appears on create table: "Engine CONNECT failed to discover table `db`.`connect_1` with 'CREATE TABLE whatever .... skip
The table can't be dropped due to the error: "Incorrect information in file './db/connect_1.frm'".
The desired behaviour is to get the ability to use long queries in SRCDEF parameter with the length limited by some configuration parameter.